<resources>
    <string name="app_name">UberClone</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_Enter">Entrar</string>
    <string name="btn_Cadastrar">Cadastrar</string>
    <string name="tela_login">Acessar minha conta</string>
    <string name="tela_cadastro">Cadastrar novo usuario</string>
    <string name="login_email">E-Mail</string>
    <string name="login_senha">Senha</string>
    <string name="cadastro_passageiro">Passageiro</string>
    <string name="cadastro_motorista">Motorista</string>
    <string name="cadastro_nome">Nome Completo</string>
    <string name="errorSingUp">Obrigatorio</string>
    <string name="toastSucessNewAccount">Sucesso ao cadastrar usuario</string>
    <string name="SucessCadastroPassageiro">Sucesso ao cadastrar passageiro</string>
    <string name="SucessCadastroMotorista">Sucesso ao cadastrar Motorista</string>
    <string name="ExceptionWeakPassword">Digite uma senha mais forte</string>
    <string name="ExceptionUserCollision">Conta já cadastrada</string>
    <string name="ExceptionInvalidCredentials">Por favor, digite um e-mail valido</string>
    <string name="ExceptionGeralRegistroUsuario">\"Erro ao cadastrar usuario: \"</string>
    <string name="tipoMotorista">M</string>
    <string name="title_activity_passageiro">PassageiroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="startRun">Começar uma viagem</string>
    <string name="whereGo">Digite seu destino</string>
    <string name="myLocal">Meu local</string>
    <string name="callUber">Chamar uber</string>
    <string name="tipoPassageiro">P</string>
    <string name="setDestinoAddrs">Informe o endereço de destino</string>
    <string name="cityDestiny">\"Cidade: \"</string>
    <string name="ThoroughfareDestiny">\"\nRua: \"</string>
    <string name="subLocalityDestiny">\"\nBairro: \"</string>
    <string name="NumberLocality">\"\nNúmero: \"</string>
    <string name="postalCodeDestiny">\"\nCep: \"</string>
    <string name="confirmAddrs">Confirme o endereço</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="waitingLocation">Aguarde, Estamos recuperando sua localização</string>
    <string name="cancelUber">Cancelar Uber</string>
    <string name="requisicoes">Requisições</string>
    <string name="waitingRequisicoes">Agurdando requisições</string>
    <string name="title_activity_corrida">CorridaActivity</string>
    <string name="acceptRace">Aceitar corrida</string>
    <string name="cancelRace">Cancelar corrida</string>
    <string name="em_viagem">A caminho do destino</string>
    <string name="destination">Destino</string>
    <string name="finishRace">Corrida finalizada</string>
    <string name="driver_is_comming">Motorista está a caminho</string>
    <string name="to_destination">A caminho do destino</string>
    <string name="totalRace">Total da viagem</string>
    <string name="totalPriceRace">\"Sua viagem ficou por: R$ \"</string>
    <string name="finishRace02">Encerrar corrida</string>
    <string name="race_canceled">Corrida cancelada pelo passageiro</string>
</resources>