<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PassageiroActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.UberClone.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/startRun"
            app:popupTheme="@style/Theme.UberClone.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_passageiro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_round"
        android:orientation="vertical"
        android:padding="8dp"
        >

        <EditText
            android:id="@+id/editLocal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/circulo_verde"
            android:drawablePadding="6dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/myLocal"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editDestino"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/circulo_verde"
            android:drawableTint="@android:color/darker_gray"
            android:drawablePadding="6dp"
            android:ems="10"
            android:hint="@string/whereGo"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/callUber"
        android:layout_gravity="bottom"
        android:theme="@style/botaoPadrao"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>